// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`healthcheck works 1`] = `
Array [
  Array [
    "/dev/null",
  ],
]
`;

exports[`hook works (fields) 1`] = `
Array [
  Array [
    "/dev/null",
    Object {
      "embeds": Array [
        Object {
          "color": 51283,
          "description": undefined,
          "fields": Array [
            Object {
              "inline": true,
              "name": "",
              "value": "**hello**",
            },
            Object {
              "inline": true,
              "name": "",
              "value": "there",
            },
          ],
          "title": "Obi-Wan Kenobi says",
        },
      ],
    },
    Object {
      "params": Object {},
    },
  ],
]
`;

exports[`hook works (mentions) 1`] = `
Array [
  Array [
    "/dev/null",
    Object {
      "allowed_mentions": Object {
        "parse": Array [
          "users",
          "roles",
        ],
      },
      "content": "<@user0> <@42>",
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor00",
        },
      ],
    },
    Object {
      "params": Object {},
    },
  ],
  Array [
    "/dev/null",
    Object {
      "allowed_mentions": Object {
        "parse": Array [
          "users",
          "roles",
        ],
      },
      "content": "<@user1> <@42>",
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor01",
        },
      ],
    },
    Object {
      "params": Object {},
    },
  ],
  Array [
    "/dev/null",
    Object {
      "allowed_mentions": Object {
        "parse": Array [
          "users",
          "roles",
        ],
      },
      "content": "<@user2> <@42>",
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor02",
        },
      ],
    },
    Object {
      "params": Object {},
    },
  ],
  Array [
    "/dev/null",
    Object {
      "allowed_mentions": Object {
        "parse": Array [
          "users",
          "roles",
        ],
      },
      "content": "<@user3> <@42>",
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor03",
        },
      ],
    },
    Object {
      "params": Object {},
    },
  ],
  Array [
    "/dev/null",
    Object {
      "allowed_mentions": Object {
        "parse": Array [
          "users",
          "roles",
        ],
      },
      "content": "<@user4> <@42>",
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor04",
        },
      ],
    },
    Object {
      "params": Object {},
    },
  ],
  Array [
    "/dev/null",
    Object {
      "allowed_mentions": Object {
        "parse": Array [
          "users",
          "roles",
        ],
      },
      "content": "<@user5> <@42>",
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor05",
        },
      ],
    },
    Object {
      "params": Object {},
    },
  ],
  Array [
    "/dev/null",
    Object {
      "allowed_mentions": Object {
        "parse": Array [
          "users",
          "roles",
        ],
      },
      "content": "<@user6> <@42>",
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor06",
        },
      ],
    },
    Object {
      "params": Object {},
    },
  ],
  Array [
    "/dev/null",
    Object {
      "allowed_mentions": Object {
        "parse": Array [
          "users",
          "roles",
        ],
      },
      "content": "<@user7> <@42>",
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor07",
        },
      ],
    },
    Object {
      "params": Object {},
    },
  ],
  Array [
    "/dev/null",
    Object {
      "allowed_mentions": Object {
        "parse": Array [
          "users",
          "roles",
        ],
      },
      "content": "<@user8> <@42>",
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor08",
        },
      ],
    },
    Object {
      "params": Object {},
    },
  ],
  Array [
    "/dev/null",
    Object {
      "allowed_mentions": Object {
        "parse": Array [
          "users",
          "roles",
        ],
      },
      "content": "<@user9> <@42>",
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor09",
        },
      ],
    },
    Object {
      "params": Object {},
    },
  ],
  Array [
    "/dev/null",
    Object {
      "allowed_mentions": Object {
        "parse": Array [
          "users",
          "roles",
        ],
      },
      "content": "<@user10> <@42>",
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor10",
        },
      ],
    },
    Object {
      "params": Object {},
    },
  ],
]
`;

exports[`hook works (missing annotations subfield) 1`] = `
Array [
  Array [
    "/dev/null",
    Object {
      "embeds": Array [
        Object {
          "color": 51283,
          "description": undefined,
          "title": "here was no description",
        },
      ],
    },
    Object {
      "params": Object {},
    },
  ],
  Array [
    "/dev/null",
    Object {
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "here was no summary",
          "title": undefined,
        },
      ],
    },
    Object {
      "params": Object {},
    },
  ],
]
`;

exports[`hook works (no mentions) 1`] = `
Array [
  Array [
    "/dev/null",
    Object {
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor00",
        },
      ],
    },
    Object {
      "params": Object {
        "q": "42",
      },
    },
  ],
  Array [
    "/dev/null",
    Object {
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor01",
        },
      ],
    },
    Object {
      "params": Object {
        "q": "42",
      },
    },
  ],
  Array [
    "/dev/null",
    Object {
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor02",
        },
      ],
    },
    Object {
      "params": Object {
        "q": "42",
      },
    },
  ],
  Array [
    "/dev/null",
    Object {
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor03",
        },
      ],
    },
    Object {
      "params": Object {
        "q": "42",
      },
    },
  ],
  Array [
    "/dev/null",
    Object {
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor04",
        },
      ],
    },
    Object {
      "params": Object {
        "q": "42",
      },
    },
  ],
  Array [
    "/dev/null",
    Object {
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor05",
        },
      ],
    },
    Object {
      "params": Object {
        "q": "42",
      },
    },
  ],
  Array [
    "/dev/null",
    Object {
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor06",
        },
      ],
    },
    Object {
      "params": Object {
        "q": "42",
      },
    },
  ],
  Array [
    "/dev/null",
    Object {
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor07",
        },
      ],
    },
    Object {
      "params": Object {
        "q": "42",
      },
    },
  ],
  Array [
    "/dev/null",
    Object {
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor08",
        },
      ],
    },
    Object {
      "params": Object {
        "q": "42",
      },
    },
  ],
  Array [
    "/dev/null",
    Object {
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor09",
        },
      ],
    },
    Object {
      "params": Object {
        "q": "42",
      },
    },
  ],
  Array [
    "/dev/null",
    Object {
      "embeds": Array [
        Object {
          "color": 51283,
          "description": "cinema",
          "title": "donor10",
        },
      ],
    },
    Object {
      "params": Object {
        "q": "42",
      },
    },
  ],
]
`;
